# HyperFrame

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md
docs/internal/: 00-product-brief.md  01-sound-engine-spec.md  02-mvp-scope.md  03-architecture.md  04-preset-guidelines.md  05-decisions.md  06-implementation-plan.md  07-parameter-map.md  08-ui-notes.md  09-wrapper-decision.md  10-next-priorities.md
plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build_core.ps1  build_vst3.ps1  package_release.ps1
src/dsp/: AdsrEnvelope.cpp  AdsrEnvelope.h  Bytebeat.cpp  Bytebeat.h  CommandTable.h  SynthEngine.cpp  SynthEngine.h  Voice.cpp  Voice.h  WaveTable.cpp  WaveTable.h  WaveTableOscillator.cpp  WaveTableOscillator.h
tools/: core_smoke_test.cpp
